<resources>
    <string name="kakao_app_key">4cb514703b2761e1caad533c11c449db</string>
    <string name="kakao_secret_key">4cb514703b2761e1caad533c11c449db</string>

    <string name="app_name">poin</string>

    <string name="loading">데이터를 로드중 입니다</string>
    <string name="error_from_cardnumber">카드번호 오류</string>
    <string name="error_from_expiry">카드유효기간 오류</string>
    <string name="error_from_birth">생년월일 오류</string>
    <string name="error_from_pass">비밀번호 오류</string>
    <string name="error_message">알 수 없는 오류가 발생하였습니다</string>
    <string name="error_auth">카카오 인증에 실패하였습니다</string>
    <string name="error_kakao_not_install">카카오톡이 설치되어 있지 않습니다</string>
    <string name="progress_login">로그인 중 입니다.</string>
    <string name="button_ok">확인</string>
    <string name="error_login">로그인 오류</string>
    <string name="button_cancel">닫기</string>
    <string name="button_connect">연결하기</string>
    <string name="error_device_find_title">장치검색 오류</string>
    <string name="error_device_find_message">QR코드와 일치하는 장치를 찾을 수 없습니다</string>
    <string name="error_not_support_service_device">서비스를 지원하지 않는 장치입니다</string>
    <string name="error_not_support_service_device_message">해당 장치는 서비스를 중단하였거나 지원되지 않는 장치입니다</string>
    <string name="error_server">서버로 부터 응답하지 않습니다</string>

    <string name="boradcast_bluetooth_name">kr.or.poin.bluetooth</string>
    <string name="hint_card_number">카드 번호</string>
    <string name="hint_expiry">만료일</string>
    <string name="hint_card_cvs">CVS</string>
    <string name="hint_card_name">카드 이름</string>
    <string name="hint_card_birth">생년 월일</string>
    <string name="title_card_add">카드 등록</string>
    <string name="snackbar_qr_error">올바른 QR코드인지 확인해 주세요</string>
    <string name="dialog_progress_machine_connect">장치와 연결 중 입니다</string>
    <string name="device_disconnect">연결 헤제</string>
    <string name="device_disconnect_message">장치와의 연결이 헤제되었습니다. 계속 사용을 원하시면 다시 연결 해 주세요</string>
    <string name="pay_loading">결제가 진행 중 입니다</string>
    <string name="pay_loading_title">결제가 진행 중 입니다</string>
    <string name="pay_loading_message">장치와의 연결 또는 앱을 종료하지 마세요</string>
    <string name="loading_error">데이터를 가져오는데 실패하였습니다</string>
    <string name="btn_retry">재시도</string>
    <string name="empty_list">판매기록이 없습니다</string>
    <string name="add_card">등록하기</string>
    <string name="hint_card_password">비밀번호 앞 두자리</string>
    <string name="dialog_progress_card_add">카드를 등록 중 입니다</string>
    <string name="dialog_title_card">카드 등록 성공</string>
    <string name="dialog_message_card">%1$s의(%2$s) 카드가 정상적으로 등록 되었습니다</string>
    <string name="need_buletooth_enable">블루투스를 활성화 해 주세요</string>
    <string name="enable_bluetooth">블루투스 활성화 하기</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_user_name">성명</string>
    <string name="gender_man">남</string>
    <string name="gender_female">여</string>
    <string name="comment_signup">서비스의 품질 향상을 위하여 사용자의 정보를 받고 있습니다</string>
    <string name="comment_welcome">반갑습니다</string>
    <string name="btn_signup">서비스 이용하기</string>
    <string name="error_form_name">이름을 입력해 주세요</string>
    <string name="error_bluetooth_enable">장치를 검색하기 위하여 블루투스를 활성화 해 주십시오</string>
    <string name="btn_error_blueooth_enable">활성화</string>
    <string name="error_server_title">서버오류</string>
    <string name="error_need_card">서비스를 사용하기 위하여 카드가 등록되어야 합니다</string>
    <string name="button_card_add">카드 등록</string>
    <string name="title_payment">결제하기</string>
</resources>
